			       =================
				BOGOFILTER NEWS
			       =================

$Id$

	2003-09-26

	* VERPs (Variable Envelope Return Paths) now have their
          sequence numbers replaced by a '#' for scoring.

	2003-09-25

	* GNU GSL 1.4 has replaced DCDFLIB . If GSL 1.4 or newer is
	  installed in your system, bogofilter will use that (which will
	  usually be a shared library); if GSL is missing or a prior
	  version is present, bogofilter will statically link against GSL 1.4
	  excerpts from the gsl/ directory.

	  While we believe we have been allowed to include DCDFLIB with
	  bogofilter, some people had expressed concerns. GSL is subject
	  to the GNU General Public License v2, so we are DEFINITELY
	  allowed to include it.

	2003-09-22

	* Added support for OS/2's file system.

	2003-09-21

	* Fixed logging behavior when scoring mailboxes, maildirs, etc.
								
	2003-09-20

	* Fixed processing of rmail files.

0.15.4	2003-09-20

	* Additional header line tagging as suggested by Michael O'Reilly.
	* Minor revision of bogotune.

	2003-09-17

	* Report if database file permissions wrong.
	* No longer including pid in syslog error messages.

	2003-09-16

	* No longer discarding message separators.

	2003-09-15

	* Added BOGOTEST environment variable to enable flex debugging.
	* Minor revision of bogominitrain.pl

	2003-09-13

	* Fixed bogoutil problem with '-w' and '-p'.

	2003-09-12

	* Revise parsing pattern for "encoded text" and regression
          test for folded text.

	2003-09-11

	* Use GSL (the Gnu Scientific Library) when it's available.

0.15.3	2003-09-10

	2003-09-09

	* Fixed maintenance mode (broken during database API rewrite).
	* Added regression test for maintenance mode.
	* Re-organized test framework to put all scripts in src/tests,
          all input files in src/tests/inputs, and reference outputs
          in src/tests/outputs.

	2003-09-08

	* Revised parsing to discard additional headers, i.e.