@@ -5,6 +5,8 @@
 * GNU GSL 1.4 has replaced DCDFLIB.
 * VERPs (Variable Envelope Return Paths) now have their sequence
   numbers replaced by a '#' for scoring.
+* Fixed problem that caused auto-update ("-u") to not update
+  separate wordlists.
 * Fixed processing of rmail files.
 * Fixed logging behavior when scoring mailboxes, maildirs, etc.
 * Added support for OS/2's file system.
